--- a/index.html
+++ b/index.html
@@ -40,5 +40,9 @@
             <td class="kaxa">42</td>
         </tr>
     </table>
+
+    <img width="200px" src="./Assets/icons8-twitter.svg" alt="twitter logo">
+
+    <video controls src="./Assets/10sec.mp4"></video>
 </body>
 </html>
